<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/home_dest">

    <fragment
        android:id="@+id/home_dest"
        android:name="com.storage.catbreeds.fragments.MainFragment"
        android:label="@string/main_fragment_label">
        <action
            android:id="@+id/add_action"
            app:destination="@id/add_cat_dest"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/settings_action"
            app:destination="@id/settings_dest"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/filter_action"
            app:destination="@id/filter_dest" />
    </fragment>
    <fragment
        android:id="@+id/add_cat_dest"
        android:name="com.storage.catbreeds.fragments.AddCatFragment"
        android:label="@string/add_cat_fragment_label" />
    <fragment
        android:id="@+id/settings_dest"
        android:name="com.storage.catbreeds.fragments.SettingsFragment"
        android:label="@string/settings_label" />
    <fragment
        android:id="@+id/filter_dest"
        android:name="com.storage.catbreeds.fragments.FilterFragment"
        android:label="@string/filter_label" />
</navigation>