<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/cat_image_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/cat_image"
            android:src="@drawable/cat_sil_placeholder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/left_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="4dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="136dp" />

        <ImageButton
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/edit_button"
            android:padding="4dp"
            android:src="@drawable/ic_baseline_edit_24"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/breed_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breed_header"
            android:textSize="@dimen/breed_text_size"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toTopOf="@id/breed_text_view" />

        <TextView
            android:id="@+id/breed_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/text_view_vertical_margin"
            android:layout_marginStart="@dimen/text_view_start_margin"
            android:textSize="@dimen/breed_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/country_text_view"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/breed_title"
            app:layout_constraintTop_toTopOf="@id/top_guideline"
            tools:text="Munchkin" />

        <TextView
            android:id="@+id/country_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_header"
            android:textSize="@dimen/common_text_size"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toTopOf="@id/country_text_view" />

        <TextView
            android:id="@+id/country_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/text_view_vertical_margin"
            android:layout_marginStart="@dimen/text_view_start_margin"
            android:textSize="@dimen/common_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/coat_length_text_view"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/country_title"
            app:layout_constraintTop_toBottomOf="@+id/breed_text_view"
            tools:text="United Kingdom" />

        <TextView
            android:id="@+id/coat_length_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coat_length_header"
            android:textSize="@dimen/common_text_size"
            app:layout_constraintBottom_toBottomOf="@id/coat_length_text_view"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toTopOf="@id/coat_length_text_view" />

        <TextView
            android:id="@+id/coat_length_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/text_view_vertical_margin"
            android:layout_marginStart="@dimen/text_view_start_margin"
            android:textSize="@dimen/common_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/size_text_view"
            app:layout_constraintStart_toEndOf="@id/coat_length_title"
            app:layout_constraintTop_toBottomOf="@id/country_text_view"
            tools:text="Semi-Long" />

        <TextView
            android:id="@+id/size_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size_header"
            android:textSize="@dimen/common_text_size"
            app:layout_constraintBottom_toBottomOf="@id/size_text_view"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toTopOf="@id/size_text_view" />

        <TextView
            android:id="@+id/size_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/text_view_vertical_margin"
            android:layout_marginStart="@dimen/text_view_start_margin"
            android:textSize="@dimen/common_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/bottom_guideline"
            app:layout_constraintStart_toEndOf="@id/size_title"
            app:layout_constraintTop_toBottomOf="@id/coat_length_text_view"
            tools:text="Medium" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="4dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="32dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>