<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/breed_edit_text"
            android:layout_width="@dimen/add_cat_item_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/add_cat_item_margin"
            android:hint="@string/breed_name_hint"
            app:layout_constraintBottom_toTopOf="@id/size_spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/size_spinner"
            android:layout_width="@dimen/add_cat_item_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/add_cat_item_margin"
            android:entries="@array/size_array"
            app:layout_constraintBottom_toTopOf="@id/coat_length_spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/breed_edit_text" />

        <Spinner
            android:id="@+id/coat_length_spinner"
            android:layout_width="@dimen/add_cat_item_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/add_cat_item_margin"
            android:entries="@array/coat_length_array"
            app:layout_constraintBottom_toTopOf="@id/country_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/size_spinner" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/country_edit_text"
            android:layout_width="@dimen/add_cat_item_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/add_cat_item_margin"
            android:hint="@string/country_hint"
            app:layout_constraintBottom_toTopOf="@id/add_cat_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coat_length_spinner" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_cat_button"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_margin="120dp"
            android:text="@string/add_cat_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/country_edit_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>